# TwentyAndFiveEyeRest

./: .gitignore  CMakeLists.txt  README.md  install.sh  run.sh  settings.json  settings.json-sample  test_settings.json
.github/workflows/: ci.yml
cmake/: BoostFetch.cmake
scripts/: build.sh  install.sh  run.sh
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  Constants.h  Core.cpp  Core.h  Filesystem.cpp  Filesystem.h  ILockDetector.h  IOSInfoProvider.h  ITimeProvider.h  LockDetectorFactory.h  Settings.cpp  Settings.h  SystemTimeProvider.h  TimeFileManager.cpp  TimeFileManager.h  main.cpp
src/backend/DefaultTimer/: DefaultTimer.cpp  DefaultTimer.h  ITimerState.h  TimerStates.cpp  TimerStates.h
src/backend/operating_system_specific/: LinuxLockDetector.cpp  LinuxLockDetector.h  OSInfoProvider.cpp  OSInfoProvider.h
src/common/: CMakeLists.txt  Constants.h  Constants.hpp  ITimeSource.h  Logger.cpp  Logger.h  RealTimeSource.h  TimeProvider.hpp
src/core/: CMakeLists.txt  HistoryAnalyzer.cpp  HistoryAnalyzer.h  IState.h  States.cpp  States.h  TimeLogger.cpp  TimeLogger.h  TimerEngine.cpp  TimerEngine.h
src/defaultTimer/: CMakeLists.txt  DefaultTimer.cpp  DefaultTimer.h  DefaultTimer.hpp  DefaultTimerState.cpp  DefaultTimerState.hpp
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
src/logging/: CMakeLists.txt  SimpleLogger.cpp
src/platform/: CMakeLists.txt  IOsUtils.h  OsUtils_Linux.cpp  OsUtils_Linux.h
src/settings/: CMakeLists.txt  SettingsManager.cpp  SettingsManager.hpp  SettingsSearch.cpp  SettingsSearch.hpp
src/ui/: CMakeLists.txt  QtMainWindow.cpp  QtMainWindow.hpp  SystemTrayController.cpp  SystemTrayController.hpp
tests/: CMakeLists.txt  MockOsUtils.h  MockTimeSource.h  main_test.cpp  test_default_timer.cpp  test_timer.cpp  verify_settings.cpp
